# cstrl

./: .clangd  .gitignore  CMakeLists.txt  README.md  build_rpg_game_dll.sh  cmake_build.bat  cmake_build.sh  cmake_build_and_run.sh  cmake_build_bpc.sh  line_count.sh  line_count_cstrl.sh  line_count_history.txt  ray_tracer_challenge.ppm  run_bpc_game.sh  run_cozy_game.sh  run_cube.sh  run_moon_game.sh  run_release_sandbox.sh  run_rpg_game.sh  run_sandbox.sh  run_tests.sh  sandbox.sh
android/: basic_android_app.c  basic_android_app.h
games/bpc/: game_design_doc.txt  main.c
games/bpc/game/: game.c  game.h
games/cozy/: main.c
games/cozy/game/: game.c  game.h
games/cube/: main.c
games/cube/game/: game.c  game.h  helpers.c  helpers.h
games/moon_game/: game_design_doc.txt  main.c  moon_game.c  moon_game.h
games/moon_game/game/: formation.c  formation.h  paths.h  physics_wrapper.h  players.c  players.h  projectile.h  units.c  units.h
games/moon_game/helpers/: helpers.c  helpers.h
games/rpg/: main.c
games/rpg/game/: game.c  game.h
include/cstrl/: cstrl_assert.h  cstrl_audio.h  cstrl_camera.h  cstrl_defines.h  cstrl_math.h  cstrl_model.h  cstrl_nuklear_ui.h  cstrl_physics.h  cstrl_platform.h  cstrl_renderer.h  cstrl_retained_ui.h  cstrl_types.h  cstrl_ui.h  cstrl_util.h
resources/models/: building.mtl  car0.mtl
resources/shaders/: borders.frag  borders.tesc  borders.tese  borders.tese.old  borders.tese.old2  borders.vert  city_borders.frag  city_borders.frag.old  city_borders.frag.old2  city_borders.frag.old3  city_borders.vert  default.vert  default3D.frag  default3D.vert  default3D_no_color.frag  default3D_no_color.vert  default3D_no_texture.frag  default3D_no_texture.vert  default_no_texture.frag  default_no_texture.vert  framebuffer.frag  framebuffer.vert  line3D.frag  line3D.vert  physics_debug_draw.frag  physics_debug_draw.vert  planet.frag  planet.vert  skybox.frag  skybox.vert  text.frag  text.vert  tilt_shift.frag  tilt_shift.vert
resources/shaders/cozy/: default3D_no_texture.frag  line3D.vert
resources/shaders/cube/: main_cube.frag  main_cube.vert
resources/shaders/learnopengl/: colors.frag  colors.vert  light_cube.vert
resources/shaders/model_loading/: default3D.vert  default3D_no_texture.frag  default3D_no_texture.vert
resources/shaders/shading_language_cookbook/: blinnphong.frag  blinnphong.vert  multilight.frag  multilight.vert  phong_gouraud.frag  phong_gouraud.vert  spotlight.frag  spotlight.vert  ubo.frag
resources/shaders/ui/: default.frag  default.vert
resources/shaders/vulkan-tutorial/: compile.bat  shader.frag
resources/textures/: background.jpg~
resources/textures/TopDownShooterAssets/: License.txt
resources/textures/beer_pong/: ball.aseprite  bar.aseprite  bar_floor.aseprite  bar_floor2.aseprite  bar_floor3.aseprite  cup.aseprite  cursor.aseprite  dorm_room.aseprite  gta_player.aseprite  logo.aseprite  meter.aseprite  meter_bar.aseprite  table.aseprite  target.aseprite
resources/textures/cozy_game/: background.aseprite  city_base.aseprite  guys.aseprite
resources/textures/planet_game/: circle.png-autosave.kra  circle.png~  space.png-autosave.kra
sandbox/: main.c
sandbox/learnopengl/: learnopengl.c
sandbox/model_loading/: model_loading.c  model_loading.h
sandbox/moon_game/: moon_game.c
sandbox/moon_game/game/: ai.c  formation.h  paths.c  physics_wrapper.c  players.c  projectile.c  projectile.h  sphere.c  sphere.h  units.c  units.h
sandbox/moon_game/helpers/: helpers.c  helpers.h
sandbox/physics_for_game_developers/: cannon_example.c  physics_for_game_developers.c  physics_for_game_developers.h
sandbox/planet/: game_design_doc.txt  planet.c  planet.h
sandbox/planet/game/: ai.c  ai.h  formation.c  formation.h  paths.c  paths.h  physics_wrapper.c  players.c  players.h  projectile.c  projectile.h  sphere.c  sphere.h  units.c  units.h
sandbox/planet/helpers/: helpers.c  helpers.h
sandbox/pong/: pong.c  pong.h
sandbox/ray_tracing/: ray_tracing.c  ray_tracing.h
sandbox/shading_language_cookbook/: cookbook.c  cookbook.h
sandbox/the_ray_tracer_challenge/: challenge.c  challenge.h
sandbox/ui/: basic_ui.c  basic_ui.h
sandbox/vulkan-tutorial/: vulkan_triangle.c  vulkan_triangle.h
src/audio/openal/: openal_audio.c
src/debug/: assert.c
src/model/: gltf_loader.c  model_internal.h  obj_loader.c  pose.c  track.c
src/physics/: collision.c
src/platform/: platform_android.c  platform_common.c  platform_em_web.c  platform_internal.h  platform_linux.c  platform_win32.c
src/renderer/: camera.c  camera.h  glsl_shader_programs.h
src/renderer/opengl/: cstrl_opengl_platform.h  cstrl_opengl_platform_linux.c  cstrl_opengl_platform_win32.c  cstrl_opengl_renderer.c  opengl_font_renderer.c  opengl_platform.h  opengl_platform_android.c  opengl_platform_em_web.c  opengl_platform_linux.c  opengl_platform_win32.c  opengl_renderer.c  opengl_shader.c  opengl_shader.h  opengl_shader_programs.h  opengl_texture.c  opengl_texture.h
src/renderer/vulkan/: vulkan_platform.h  vulkan_platform_linux.c  vulkan_platform_win32.c  vulkan_renderer.c  vulkan_shader.c  vulkan_texture.c
src/ui/: ui.c  ui.c.old  ui.render_order.c  ui_internal.h  ui_opengl_renderer.c
src/ui/nuklear/: nuklear_cstrl.c
src/ui/retained/: retained_ui.c
src/util/: dynamic_array.c  dynamic_array.h  file_helpers.c  file_helpers.h  general_helpers.c  general_helpers.h  random.c
test/: main.c  test_manager.c  test_manager.h  test_types.h
test/cstrl_math/: test_quat.c  test_quat.h  test_vec2.c  test_vec3.c  test_vec3.h  test_vec4.c
test/integration_tests/: integration_tests.c  integration_tests.h
test/manual_tests/: manual_tests.c  manual_tests.h
test/manual_tests/basic/: test_4_cubes_scene.c  test_4_cubes_scene.h
test/manual_tests/sandbox/: learnopengl.c  learnopengl.h
test/renderer/: test_camera.c  test_camera.h
test/test_manager/: test_manager.c  test_manager.h  test_types.h
test/unit_tests/: unit_tests.c  unit_tests.h
test/util/: test_dynamic_array.c
web_sandbox/: CMakeLists.txt  main.c
web_sandbox/pong/: pong.c
(+73 files in other folders)
